atualização no html e css

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 <!-- Card para exibir informações -->
 <div id="card" style="display: none;">
     <h3>Observation</h3>
-    <p>Dec 2023: 2.52 <span id="observationValue"></span></p>
-    <p>Updated: Jan 4, 2024</p>
+    <p>Jan 2024: 3.18
+        <span id="observationValue"></span></p>
+    <p>Updated: Feb 7, 2024</p>
 </div>
     <script>
         function toggleIframes() {
